--- a/templates/results/results-table.html
+++ b/templates/results/results-table.html
@@ -3,24 +3,24 @@
         <div class="white">
 
 			<script type="text/ng-template" id="tree">
-			    <div ng-if="item.children" class="row parent collapsed">
+			    <div ng-if="item.children.length" class="row parent collapsed">
 			        <div class="col-xs-6">
 			            <div class="wrap">
 			                <span class="expandme" ng-click="vm.toggleHideChildren($event)"></span>
-			                    <span><input type="checkbox" style="margin-right: 10px;">{{ item.indicatorName }}</span>
+			                <span><input type="checkbox" style="margin-right: 10px;" ng-class="{'': item.children.length}">{{ item.indicatorName }}</span>
 			            </div>
 			        </div>
 			    </div>
 
-			    <div ng-if="!item.children" class="row">
+			    <div ng-if="!item.children.length" class="row">
 			        <div class="col-xs-6">
 			            <div class="wrap">
-			                <span>{{ item.indicatorName }}</span>
+			                <span class="noexpand"><input type="checkbox" style="margin-right: 10px;" ng-class="{'': item.children.length}">{{ item.indicatorName }}</span>
 			            </div>
 			        </div>
 			    </div>
 
-			    <div ng-if="item.children" class="children">
+			    <div ng-if="item.children.length" class="children">
 			        <div collapse="vm.isCollapsed" ng-repeat="item in item.children" ng-include="'tree'"></div>
 			    </div>
 			</script>
