--- a/templates/results/results.html
+++ b/templates/results/results.html
@@ -14,16 +14,22 @@
             <div class="col-md-8">
                 <div class="white">
                     <p>
-                        Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Etiam porta sem malesuada magna mollis euismod.
-                        <br>&nbsp;<br>
-                        (uitleg, disclaimer mbt kwaliteit data en aangeven dat op andere plaatsen in de website ook nog resultaat gegevens vermeld staan)
-                        <br>&nbsp;<br>
-                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vestibulum id ligula porta felis euismod semper. Nullam quis risus eget urna mollis ornare vel eu leo.
+                        Kwaliteit van de data; opgeleverd door aanvragers; kan over optimistisch zijn; bovendien wordt meestal uitgegaan van 1/3 uitval van projecten.<br>&nbsp;<br>
+                        Niet alle indicatoren voor alle programma’s/projecten bijgehouden (zie # projects achter indicator) – hangt af van afspraken tussen MinBuZa en RVO per programma – hangt af van afspraken tussen MinBuZa en RVO per programma. Andersom zijn dit lang niet alle (relevante) indicatoren en voor veel programma’s ook niet de belangrijkste: eerste slag in opnemen van indicatoren, meer zullen later volgen. Sommige indicatoren op programma of project niveau ook niet aggregeerbaar.<br>&nbsp;<br>
+                        Alles cummulatief. Resultaat van een jaar kan evt door verschil tussen jaar en jaar ervoor te bekijken.
                     </p>
                 </div>
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-8">
+                <h3 ng-click="vm.clickCheckbox()" ng-bind-html="vm.indicatorTitle"></h3>
+                <p ng-bind-html="vm.indicatorDescription">
+                    
+                </p>
+            </div>
+        </div>
         <results-chart></results-chart>
         <results-table></results-table>
 
