--- a/templates/results/results-project-list.html
+++ b/templates/results/results-project-list.html
@@ -1,7 +1,10 @@
-<div class="row">
-    <div class="col-md-8">
-        <div class="white">
-            <h3>Results for selected indicators</h3>
+
+<div class="container extra">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="white">
+                <h3>Results for selected indicators</h3>
+            </div>
         </div>
     </div>
 </div>
@@ -38,7 +41,7 @@
     </div>
 </div>
 
-<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview" ng-show="vm.activities.length != 0">
+<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' id="project-list-results" class="table list-overview" ng-show="vm.activities.length != 0">
     <thead>
         <tr>
             <th>Project title</th>
