--- a/templates/results/results.html
+++ b/templates/results/results.html
@@ -3,40 +3,47 @@
     <filter-bar views="[]" current-page="themas"></filter-bar>
 
     <div class="container extra">
-
-        <div class="detailview white no-margin-bottom no-padding-bottom">
-            <h1 class="no-margin-bottom">Results</h1>         
-        </div>
-
-        <hr class="darkblue">
-    
         <div class="row">
             <div class="col-md-8">
                 <div class="white">
+                    <h3>Results</h3>
                     <p>
-                        Kwaliteit van de data; opgeleverd door aanvragers; kan over optimistisch zijn; bovendien wordt meestal uitgegaan van 1/3 uitval van projecten.<br>&nbsp;<br>
-                        Niet alle indicatoren voor alle programma’s/projecten bijgehouden (zie # projects achter indicator) – hangt af van afspraken tussen MinBuZa en RVO per programma – hangt af van afspraken tussen MinBuZa en RVO per programma. Andersom zijn dit lang niet alle (relevante) indicatoren en voor veel programma’s ook niet de belangrijkste: eerste slag in opnemen van indicatoren, meer zullen later volgen. Sommige indicatoren op programma of project niveau ook niet aggregeerbaar.<br>&nbsp;<br>
+                       Niet alle indicatoren voor alle programma’s/projecten bijgehouden (zie # projects achter indicator) – hangt af van afspraken tussen MinBuZa en RVO per programma – hangt af van afspraken tussen MinBuZa en RVO per programma. Andersom zijn dit lang niet alle (relevante) indicatoren en voor veel programma’s ook niet de belangrijkste: eerste slag in opnemen van indicatoren, meer zullen later volgen. Sommige indicatoren op programma of project niveau ook niet aggregeerbaar.<br>&nbsp;<br>
                         Alles cummulatief. Resultaat van een jaar kan evt door verschil tussen jaar en jaar ervoor te bekijken.
                     </p>
                 </div>
             </div>
+            <div class="col-md-4 ">
+            <h3>Disclaimer</h3>
+            Kwaliteit van de data; opgeleverd door aanvragers; kan over optimistisch zijn; bovendien wordt meestal uitgegaan van 1/3 uitval van projecten.
+            </div>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-md-8">
-                <h3 ng-click="vm.clickCheckbox()" ng-bind-html="vm.indicatorTitle"></h3>
+    <div class="row" style="margin-top: 16px;">
+        <div class="col-sm-12">
+            <div class="front-callout" style="color: #fff; padding: 4px 0;">
+                <h3 style="color: #fff" ng-click="vm.clickCheckbox()" ng-bind-html="vm.indicatorTitle"></h3>
                 <p ng-bind-html="vm.indicatorDescription">
                     
                 </p>
             </div>
         </div>
-        <results-chart></results-chart>
-        <results-table></results-table>
-
-        <hr class="darkblue">
-
-        <results-project-list></results-project-list>
-
     </div>
+
+    <div style="background-color: #f2f8fc; margin-top: -10px;">
+        <div class="container extra" style="padding-top: 30px;">
+            <results-chart></results-chart>
+        </div>
+    </div>
+
+    
+
+    <results-table></results-table>
+
+    <hr class="darkblue" style="margin-top: 30px;">
+
+    <results-project-list></results-project-list>
+
 </div>
 
