transactio naggregations upgrade

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -79,15 +79,15 @@
 <div class="container">
   <div class="row visualize">
       <div class="col-sm-4 text-center">
-        <oipa-pie-chart group-by="related_activity" aggregation-key="incoming_fund" aggregations="count,incoming_fund"></oipa-pie-chart>
+        <oipa-pie-chart group-by="related_activity" aggregation-key="incoming_fund" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
         <h4>Budget per programme</h4>
       </div>
       <div class="col-sm-4 text-center">
-        <oipa-pie-chart group-by="recipient_country" aggregation-key="incoming_fund" aggregations="count,recipient_country_percentage_weighted_incoming_fund"></oipa-pie-chart>
+        <oipa-pie-chart group-by="recipient_country" aggregation-key="incoming_fund" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
         <h4>Budget per country</h4>
       </div>
       <div class="col-sm-4 text-center">
-        <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund" aggregations="count,sector_percentage_weighted_incoming_fund"></oipa-pie-chart>
+        <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
         <h4>Budget per sector</h4>
       </div>
   </div>
