--- a/templates/results/results-table.html
+++ b/templates/results/results-table.html
@@ -4,18 +4,45 @@
 
 			<script type="text/ng-template" id="tree">
 			    <div ng-if="item.children.length" class="row parent collapsed">
-			        <div class="col-xs-6">
+			        <div class="col-xs-12">
 			            <div class="wrap">
 			                <span class="expandme" ng-click="vm.toggleHideChildren($event)"></span>
-			                <span><input type="checkbox" style="margin-right: 10px;" ng-class="{'': item.children.length}">{{ item.indicatorName }}</span>
+			                <span>
+			                <input 
+			                	type="checkbox" 
+			                	style="margin-right: 10px;" 
+			                	ng-click="vm.setGroup(item)"
+			                	value="{{item.indicatorName}}"
+			                	ng-class="{'': item.children.length}">
+			                	
+			                	<span ng-if="vm.indicators[item.indicatorName].header">
+			                		{{ item.indicatorName }}
+			                	</span>
+			                	<span ng-if="!vm.indicators[item.indicatorName].header">
+			                		{{ item.indicatorName + ' (' + vm.indicators[item.indicatorName].activity_count + ' projects)' }}
+			                	</span>
+			                </span>
 			            </div>
 			        </div>
 			    </div>
 
 			    <div ng-if="!item.children.length" class="row">
-			        <div class="col-xs-6">
+			        <div class="col-xs-12">
 			            <div class="wrap">
-			                <span class="noexpand"><input type="checkbox" style="margin-right: 10px;" ng-class="{'': item.children.length}">{{ item.indicatorName }}</span>
+			                <span class="noexpand">
+			                <input 
+			                	type="checkbox" 
+			                	style="margin-right: 10px;" 
+			                	ng-click="vm.setGroup(item)" 
+			                	ng-class="{'': item.children.length}">
+			                	
+			                	<span ng-if="vm.indicators[item.indicatorName].header">
+			                		{{ item.indicatorName }}
+			                	</span>
+			                	<span ng-if="!vm.indicators[item.indicatorName].header">
+			                		{{ item.indicatorName + ' (' + vm.indicators[item.indicatorName].activity_count + ' projects)' }}
+			                	</span>
+			                </span>
 			            </div>
 			        </div>
 			    </div>
@@ -28,14 +55,14 @@
 			<div class="fake-table" ng-show="vm.resultIndicators.length != 0">
 
 				<div class="row head">
-			        <div class="col-xs-12"><div class="wrap">Select result indicators</div></div>
+			        <div class="col-xs-12"><div class="wrap"><h3>Select result indicators</h3></div></div>
 			    </div>
-
 			    <div class="body" 
 			        ng-repeat="item in vm.resultIndicators"
 			        ng-include="'tree'"
 			        ng-if="item.count != 0">
 			    </div>
+
 			</div>
         </div>
     </div>
