--- a/templates/results/results-project-list.html
+++ b/templates/results/results-project-list.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="container extra">
     <div class="row">
         <div class="col-md-8">
@@ -7,9 +7,9 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
-<!--   <div class="row">
+  <div class="row">
       <div class="col-md-12">
           <div class="sort">
               <span class="sort-by">Sort by: </span>
@@ -21,16 +21,16 @@
                         <option value="-title">Title (Z-A)</option>
                   </select>
               </div>
-              <span class="results">Results: <span class="total">{{vm.totalActivities}}</span></span>
+              <span class="results">Results: <span class="total">{{vm.activities.length}}</span></span>
               
-              <span class="download-list">
+              <!-- <span class="download-list">
                 <a ng-click="vm.download('json')"><i class="fa fa-download"></i>JSON</a>
                 &nbsp;&nbsp;&nbsp;
                 <a ng-click="vm.download('csv')"><i class="fa fa-download"></i>CSV</a>
-              </span>
+              </span> -->
           </div>
       </div>
-  </div> -->
+  </div>
 
 <div ng-if='vm.totalActivities == 0' class="row">
     <div class="col-sm-12">
