--- a/templates/filters/filter-panel-implementing-organisations.html
+++ b/templates/filters/filter-panel-implementing-organisations.html
@@ -39,7 +39,7 @@
 						    		<div class="checkbox">
 							    		<label class="switch">
 							    			<input type="checkbox" checklist-model="vm.selectedImplementingOrganisations" checklist-value="item"><i></i>
-							    			<span>{{ item.name | capitalize }}</span>
+							    			<span>{{ item.participating_organisation | capitalize }}</span>
 							    		</label>
 							    	</div>
 						    	</td>
