--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -88,10 +88,16 @@
                     <div class="panel lightblue with-pie">
                         <h3>Projects per programme</h3>
                         <hr>
-                        <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart 
+                            group-by="related_activity" 
+                            aggregation-key="activity_count" 
+                            aggregations="activity_count,incoming_fund"></oipa-pie-chart>
                         <h3>Projects per country</h3>
                         <hr>
-                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,recipient_country_percentage_weighted_incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart 
+                            group-by="recipient_country" 
+                            aggregation-key="activity_count" 
+                            aggregations="activity_count,incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue with-table share">
                         <h3>Export & share</h3>
